<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"/>

        <LinearLayout
            android:id="@+id/forgot_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/splash_divider_width"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                app:hintTextAppearance="@style/AppTextInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/forgot_password_email"
                    style="@style/SplashEdditext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registered_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/recover_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/selector_main_btn"
                android:fontFamily="sans-serif-light"
                android:padding="10dp"
                android:text="@string/reset_password"
                android:textColor="@color/colorBaseDark" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sign_in_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/splash_divider_width"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                app:hintTextAppearance="@style/AppTextInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/sign_in_email"
                    style="@style/SplashEdditext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="@dimen/splash_divider_width"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/white" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/splash_divider_width"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white"
                app:hintTextAppearance="@style/AppTextInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/sign_in_password"
                    style="@style/SplashEdditext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/selector_main_btn"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorBaseDark" />

            <TextView
                android:id="@+id/forgot_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_help_outline_white_24dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="@dimen/splash_divider_footer"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="New to Lender?"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="10dp"
            android:text="Sign Up"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>