<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/details_list_kyc_status_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        card_view:cardCornerRadius="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="Your KYC Status"
                android:textColor="@color/colorBase"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/details_list_kyc_proof_identity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:drawableLeft="@drawable/ic_face_black_24dp"
                    android:gravity="center"
                    android:text="Identity"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/details_list_kyc_proof_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:drawableLeft="@drawable/ic_store_black_24dp"
                    android:gravity="center"
                    android:text="Address"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/details_list_kyc_proof_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:drawableLeft="@drawable/ic_assignment_ind_black_24dp"
                    android:gravity="center"
                    android:text="Student"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-light"
                android:text="NOTE: You need to provide proofs for each category before proceeding."
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <com.baoyz.widget.PullRefreshLayout
        android:id="@+id/details_refresh_container"
        android:layout_below="@+id/details_list_kyc_status_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:refreshType="material">

        <ListView
            android:id="@+id/details_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />

    </com.baoyz.widget.PullRefreshLayout>

    <TextView
        android:id="@+id/education_empty_list"
        style="@style/EmptyListTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/ic_education"
        android:text="@string/content_empty"
        android:visibility="gone" />

    <TextView
        android:id="@+id/events_empty_list"
        style="@style/EmptyListTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/ic_calendar"
        android:text="@string/events_empty"
        android:visibility="gone" />

    <TextView
        android:id="@+id/kyc_empty_list"
        style="@style/EmptyListTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/ic_identity"
        android:text="@string/content_empty"
        android:visibility="gone" />

    <TextView
        android:id="@+id/details_empty_list"
        style="@style/EmptyListTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/ic_empty"
        android:text="@string/records_empty"
        android:visibility="gone" />

    <TextView
        android:id="@+id/accounts_empty_list"
        style="@style/EmptyListTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/ic_wallet"
        android:text="@string/content_empty"
        android:visibility="gone" />

    <TextView
        android:id="@+id/transactions_empty_list"
        style="@style/EmptyListTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/ic_transactions"
        android:text="@string/records_empty"
        android:visibility="gone" />

    <TextView
        android:id="@+id/details_no_connection"
        style="@style/EmptyListTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/ic_error"
        android:text="@string/connection_error"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/details_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/ic_add"
        android:visibility="gone"
        app:elevation="6dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@color/colorBase" />

</RelativeLayout>